Bug 1421107 - Stop perf tab wrapping at narrower widths

--- a/ui/css/treeherder-info-panel.css
+++ b/ui/css/treeherder-info-panel.css
@@ -108,6 +108,11 @@ div#info-panel .info-panel-navbar > ul.tab-headers > li {
   min-width: 550px;
 }
 
+.perf-job-selected {
+  /* An override to optimize all other non-perf jobs at 550px */
+  min-width: 646px !important;
+}
+
 .info-panel-navbar-controls {
   flex-wrap: nowrap;
 }
